desktop layout done

--- a/main.html
+++ b/main.html
@@ -3,23 +3,51 @@
 <html>
     <head>
         <title>Springboard</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <ul>
-            <li>
-                <!-- Instagram -->
-                <p>Instagram</p>
-            </li>
+        <div id="name-container">
+            <img id="profile-picture" src="./profile_picture.jpg" alt="Profile Picture">
+            <h1 id="name">Daniel Cai</h1>
+            <h5 id="pronouns">he/him</h5>
+        </div>
+        <div id="link-container">
+            <ul id="link-list">
+                <li class="link-block">
+                    <!-- Instagram -->
+                    <a href="https://instagram.com/dcai169/">
+                        <h3 class="outbound-link">Instagram</h3>
+                    </a>
+                </li>
+    
+                <li class="link-block">
+                    <!-- Github -->
+                    <a href="https://github.com/Dcai169">
+                        <h3 class="outbound-link">Github</h3>
+                    </a>
+                </li>
 
-            <li>
-                <!-- Github -->
-                <p>Github</p>
-            </li>
+                <li class="link-block">
+                    <!-- Venmo -->
+                    <a href="https://venmo.com/u/dcai169/">
+                        <h3 class="outbound-link">Venmo</h3>
+                    </a>
+                </li>
 
-            <li>
-                <!-- Twitter -->
-                <p>Twitter</p>
-            </li>
-        </ul>
+                <li class="link-block">
+                    <!-- PayPal -->
+                    <a href="https://paypal.me/dcai169">
+                        <h3 class="outbound-link">PayPal</h3>
+                    </a>
+                </li>
+
+                <li class="link-block">
+                    <!-- Twitter -->
+                    <a href="https://twitter.com/DanielCai1">
+                        <h3 class="outbound-link">Twitter</h3>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </body>
 </html>
