added peripheral page

--- a/peripheral.html
+++ b/peripheral.html
@@ -12,42 +12,29 @@
     <body>
         <div id="name-container">
             <img id="profile-picture" src="./main_profile_picture.jpg" alt="Profile Picture">
-            <h1 id="name">Daniel Cai</h1>
+            <h1 id="name">Alcidine</h1>
+            <h5 id="pronouns">Alcidine#5154</h5>
             <h5 id="pronouns">he/him</h5>
         </div>
         <div id="link-container">
             <ul id="link-list">
                 <li class="link-block">
                     <!-- Instagram -->
-                    <a href="https://instagram.com/dcai169/">
+                    <a href="https://instagram.com/alcidine_/">
                         <h3 class="outbound-link">Instagram</h3>
                     </a>
                 </li>
     
                 <li class="link-block">
-                    <!-- Github -->
-                    <a href="https://github.com/Dcai169">
-                        <h3 class="outbound-link">Github</h3>
-                    </a>
-                </li>
-
-                <li class="link-block">
-                    <!-- Venmo -->
-                    <a href="https://venmo.com/u/dcai169/">
-                        <h3 class="outbound-link">Venmo</h3>
-                    </a>
-                </li>
-
-                <li class="link-block">
-                    <!-- PayPal -->
-                    <a href="https://paypal.me/dcai169">
-                        <h3 class="outbound-link">PayPal</h3>
+                    <!-- Steam -->
+                    <a href="https://steamcommunity.com/id/Alcidine">
+                        <h3 class="outbound-link">Steam</h3>
                     </a>
                 </li>
 
                 <li class="link-block">
                     <!-- Twitter -->
-                    <a href="https://twitter.com/DanielCai1">
+                    <a href="https://twitter.com/Alcidine_">
                         <h3 class="outbound-link">Twitter</h3>
                     </a>
                 </li>
