--- a/peripheral.html
+++ b/peripheral.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Springboard</title>
+        <title>Social Spring</title>
         <link rel="stylesheet" href="./styles.css">
         <script src="scripts.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
