--- a/main.html
+++ b/main.html
@@ -51,6 +51,14 @@
                         <h3 class="outbound-link">Twitter</h3>
                     </a>
                 </li>
+
+
+                <li class="link-block">
+                    <!-- Email -->
+                    <a href="mailto:danielxcai169@gmail.com">
+                        <h3 class="outbound-link">Email</h3>
+                    </a>
+                </li>
             </ul>
         </div>
     </body>
